# OhMyStock

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_app_meta.py  0002_market_data.py  0003_sector_memberships.py  0004_scoring_tables.py  0005_analysis_tables.py  0006_analysis_advice.py  0007_trading_tables.py  0008_analysis_economist_fallback.py  0009_trade_run_environment.py  0010_trade_orders_caps_seeding.py  0011_scheduler_events.py  0012_trade_run_warnings.py
backend/app/: main.py
backend/app/api/: analyze.py  collect.py  exclusion.py  health.py  schedule.py  score.py  security.py  trade.py  ws.py
backend/app/core/: background_service.py  config.py  market_calendar.py  replay_clock.py
backend/app/domain/: broker.py  collection.py  (+2 more)
backend/replay/: __init__.py  account.py  clock.py  config.py  faults.py  main.py  matching.py  minute_store.py  ticks.py  tokens.py
backend/scripts/: pregate_g1_ka10095.py  pregate_g2_orders.py  pregate_g3_balance.py  replay_collect_minutes.py  replay_coverage_gate.py  replay_probe_lowliq_quote.py  replay_r7_seed.py
backend/tests/: conftest.py  test_api_analyze.py  test_api_collect.py  test_api_score.py  test_api_security.py  test_api_trade.py  test_app_lifespan.py  test_background_service.py  test_collection_service.py  test_config.py  test_db.py  test_domain_broker.py  test_health.py  test_market_calendar.py  test_migrations.py  test_replay_profile.py  test_sector_classification.py  test_ws.py
(+149 files in other folders)
