[project]
name = "ohmystock-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.3",
    "tzdata>=2024.1",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "respx>=0.22",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = ["live: 실제 키움 모의서버를 호출하는 스모크 테스트 (기본 제외)"]
addopts = "-m \"not live\""
